--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <head>
     <title> Welcome to my github website! </title>
 </head>
-<body style="background-color: yellow;">
+<body style="background-color: thistle;">
     <h1 style="text-align: center">
         Welcome!
     </h1>
 
-    <p style="text-align: center">
+    <p style="text-align: left">
         WEEK 1:
     </p>
     
-    <a href="seeing.html" target="_blank" style="color:white">
-            Ways of seeing response!
+    <a href="seeing.html" target="_blank" style="color:black">
+            Ways of seeing response.
     </a>
    
     
