--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title> Welcome to my github website! </title>
+    <title style="color:white"> Welcome to my github website! </title>
 </head>
-<body style="background-color: thistle;">
+<body style="background-color: lightcyan;">
     <h1 style="text-align: center">
         Welcome!
     </h1>
 
-    <p style="text-align: left">
+    <p style="text-align: left; color:sandybrown">
         WEEK 1:
     </p>
     
-    <a href="seeing.html" target="_blank" style="color:black">
+    <a href="seeing.html" target="_blank" style="color:lemonchiffon">
             Ways of seeing response.
     </a>
    
