--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
     <title style="color:white"> Welcome to my github website! </title>
 </head>
-<body style="background-color: lightcyan;">
+<body style="background-color: rosybrown;">
     <h1 style="text-align: center">
         Welcome!
     </h1>
 
-    <p style="text-align: left; color:sandybrown">
+    <p style="text-align: left; color:black">
         WEEK 1:
     </p>
     
-    <a href="seeing.html" target="_blank" style="color:lemonchiffon">
+    <a href="/Week1/seeing.html" target="_blank" style="color:dimgray">
             Ways of seeing response.
     </a>
    
