--- a/index.html
+++ b/index.html
@@ -11,12 +11,22 @@
     <p style="text-align: left; color:black">
         WEEK 1:
     </p>
-    
+
     <a href="/Week1/seeing.html" target="_blank" style="color:dimgray">
-            Ways of seeing response.
+        Ways of seeing response.
     </a>
-   
-    
+
+    <p style="text-align: left; color:black">
+        WEEK 2:
+    </p>
+
+    <p style="text-align: left; color:black">
+        WEEK 3:
+    </p>
+
+    <a href="/Week3/WebResponse.html" target="_blank" style="color:dimgray">
+        Week 3 response
+    </a>
 
 </body>
 </html>
