--- a/Week3/Button42.html
+++ b/Week3/Button42.html
@@ -10,7 +10,7 @@
         </div>
 
         <div>
-            <a href="/WebResponse.html">
+            <a href="WebResponse.html">
                 Go back.
             </a>
         </div>
