--- a/Week3/WebResponse.html
+++ b/Week3/WebResponse.html
@@ -27,7 +27,7 @@
             <summary>Memex buttons</summary>
             <em>-there are a lot of buttons here, which one do you want to press...?</em>
             <div>
-                <img src="/images/button.jpg" align="left" alt="button" style="width:300px" />
+                <img src="images/button.jpg" align="left" alt="button" style="width:300px" />
             </div>
 
             <ul>
@@ -44,7 +44,7 @@
                     <em>The list of buttons continue...</em>
                 </li>
                 <li>
-                    <a href="/Button42.html" target="_blank">
+                    <a href="Button42.html" target="_blank">
                         Button42(Answer to the Ultimate Question of Life, the Universe, and Everything)
                     </a>
                 </li>
