css style sheet

--- a/index.html
+++ b/index.html
@@ -2,13 +2,16 @@
 <html>
 <head>
     <title style="color:white"> Welcome to my github website! </title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="homePageStyleSheet.css">
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Rubik">
 </head>
-<body style="background-color: rosybrown;">
+<body>
     <h1 style="text-align: center">
-        Welcome!
+        Welcome to my website!
     </h1>
 
-    <p style="text-align: left; color:black">
+    <p class="Chapter">
         WEEK 1:
     </p>
 
@@ -16,11 +19,11 @@
         Ways of seeing response.
     </a>
 
-    <p style="text-align: left; color:black">
+    <p class="Chapter">
         WEEK 2:
     </p>
 
-    <p style="text-align: left; color:black">
+    <p class="Chapter">
         WEEK 3:
     </p>
 
