--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Rubik">
 </head>
 <body>
-    <h1 style="text-align: center">
+    <h1>
         Welcome to my website!
     </h1>
 
@@ -15,7 +15,7 @@
         WEEK 1:
     </p>
 
-    <a href="/Week1/seeing.html" target="_blank" style="color:dimgray">
+    <a href="/Week1/seeing.html" target="_blank" >
         Ways of seeing response.
     </a>
 
