--- a/index.html
+++ b/index.html
@@ -8,16 +8,17 @@
 </head>
 <body>
     <h1>
-        Welcome to my website!
+        !Welcome to my website!
     </h1>
 
     <p class="Chapter">
         WEEK 1:
+        <a href="/Week1/seeing.html" target="_blank">
+            Ways of seeing response.
+        </a>
     </p>
 
-    <a href="/Week1/seeing.html" target="_blank" >
-        Ways of seeing response.
-    </a>
+    
 
     <p class="Chapter">
         WEEK 2:
@@ -25,11 +26,12 @@
 
     <p class="Chapter">
         WEEK 3:
+        <a href="/Week3/WebResponse.html" target="_blank">
+            Week 3 response
+        </a>
     </p>
 
-    <a href="/Week3/WebResponse.html" target="_blank" style="color:dimgray">
-        Week 3 response
-    </a>
+    
 
 </body>
 </html>
