--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </a>
     </p>
 
-    
+
 
     <p class="Chapter">
         WEEK 2:
@@ -31,7 +31,14 @@
         </a>
     </p>
 
-    
+    <p class="Chapter">
+        WEEK 3:
+        <a href="/Week4/PartnerPortrait.html" target="_blank">
+            Partner Portrait
+        </a>
+    </p>
+
+
 
 </body>
 </html>
