--- a/index.html
+++ b/index.html
@@ -32,9 +32,16 @@
     </p>
 
     <p class="Chapter">
-        WEEK 3:
+        WEEK 4:
         <a href="/Week4/PartnerPortrait.html" target="_blank">
             Partner Portrait
+        </a>
+    </p>
+
+    <p class="Chapter">
+        WEEK 5:
+        <a href="/Week5/pages/homepage.html" target="_blank">
+            Net art presentation w/ David
         </a>
     </p>
 
