--- a/Week5/pages/homepage.html
+++ b/Week5/pages/homepage.html
@@ -16,7 +16,7 @@
         </div>
         
         <div class="item-Content4">
-            <img src=../images/starrynight.png alt="starrynight" class="center" />
+            <img src=..images/starrynight.png alt="starrynight" class="center" />
         </div>
 
         <div class="item-Content1">
