--- a/Week5/pages/homepage.html
+++ b/Week5/pages/homepage.html
@@ -17,6 +17,7 @@
         
         <div class="item-Content4">
             <img src=../images/starrynight.png alt="starrynight" class="center" />
+            <img src=../images/joke.png alt="starrynight" class="center" />
         </div>
 
         <div class="item-Content1">
