--- a/index.html
+++ b/index.html
@@ -45,6 +45,13 @@
         </a>
     </p>
 
+    <p class="Chapter">
+        WEEK 6:
+        <a href="/Week6/base_page.html" target="_blank">
+            Midterm Project
+        </a>
+    </p>
+
 
 
 </body>
