--- a/Week6/base_page.html
+++ b/Week6/base_page.html
@@ -16,7 +16,7 @@
         </div>
         <div class="screen">
             <div class="display">
-                <img src="/images/screen.gif" />
+                <img src="images/screen.gif" />
             </div>
             <div class="speech">
                 <p id="description">
