--- a/Week6/base_page.html
+++ b/Week6/base_page.html
@@ -31,16 +31,16 @@
         <div class="party">
             <div class="member1">
                 <!--<input type="image" src="/images/party.png" name="saveForm" class="btTxt submit" id="saveForm" />-->
-                <img src="/images/gif/party_portrait_1.gif" />
+                <img src="images/gif/party_portrait_1.gif" />
             </div>
 
             <div class="member2">
                 <!--<button class="transition_btn" onclick="change_page_p1()">Click me</button>-->
-                <img src="/images/gif/party_portrait_2.gif" />
+                <img src="images/gif/party_portrait_2.gif" />
             </div>
 
             <div class="member3">
-                <img src="/images/gif/party_portrait_3.gif" />
+                <img src="images/gif/party_portrait_3.gif" />
             </div>
 
             <div class="talk1">
@@ -61,16 +61,16 @@
 
         <div class="player_info">
             <div class="portrait">
-                <img src="/images/portrait.png" />
+                <img src="images/portrait.png" />
             </div>
 
             <div class="healthbar">
-                <img src="/images/health.gif" />
+                <img src="images/health.gif" />
             </div>
 
             <div class="musicbox">
                 <audio id="background_music">
-                    <source src="/music/music.mp3" type="audio/mp3">
+                    <source src="music/music.mp3" type="audio/mp3">
                     Your browser does not support the audio element.
                 </audio>
                 <button class="music_btn" onclick="toggleMusic()">Play/Stop Music</button>
@@ -82,12 +82,12 @@
         <div class="bottom_tab">
            
             <div class="inventory1">
-                <img class="action1" src="/images/item1.png" onclick="change_text();" onmouseover="this.src='/images/item1_a.png'"
-                     onmouseout="this.src='/images/item1.png'" />
+                <img class="action1" src="images/item1.png" onclick="change_text();" onmouseover="this.src='images/item1_a.png'"
+                     onmouseout="this.src='images/item1.png'" />
             </div>
             <div class="inventory2">
-                <img class="action2" src="/images/item2.png" onclick="change_text2()" onmouseover="this.src='/images/item2_a.png'"
-                     onmouseout="this.src='/images/item2.png'" />
+                <img class="action2" src="images/item2.png" onclick="change_text2()" onmouseover="this.src='images/item2_a.png'"
+                     onmouseout="this.src='images/item2.png'" />
             </div>
             <div class="inventory3">
             </div>
@@ -107,7 +107,7 @@
             </div>
 
             <div class="map">
-                <img src="/images/map.png" />
+                <img src="images/map.png" />
             </div>
         </div>
 
