--- a/Week6/party2_page.html
+++ b/Week6/party2_page.html
@@ -4,7 +4,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
-    <title>Party member 1</title>
+    <title>Party member 2</title>
     <script src="script.js"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=DotGothic16&display=swap" rel="stylesheet">
@@ -16,11 +16,11 @@
         </div>
         <div class="screen">
             <div class="display">
-                <img id ="screen_pic" src="images/gif/Oyster/oyster_idle.gif" />
+                <img id="screen_pic" src="images/gif/Skeleton/skeleton_idle.gif" />
             </div>
             <div class="speech">
                 <p id="description">
-                    Oyster: What?
+                    Thritis: Hmmmmm?
                 </p>
                 <button class="continue_btn" onclick="advance_text(current_dialogue, dia_num)">next</button>
             </div>
@@ -44,13 +44,13 @@
             </div>
 
             <div class="talk1">
-                <input class="talk_btn" type="button" value="Currently Talking to..."
+                <input class="talk_btn" type="button" value="Talk to Oyster"
                        onclick="window.location.href = 'party1_page.html'" />
                 <!--<button class="talk_btn" onclick="">Talk to member1</button>-->
             </div>
 
             <div class="talk2">
-                <input class="talk_btn" type="button" value="Talk to Thritis"
+                <input class="talk_btn" type="button" value="Currently Talking to..."
                        onclick="window.location.href = 'party2_page.html'" />
             </div>
 
@@ -93,7 +93,7 @@
 
             </div>
             <div class="inventory2">
-                <img class="action2" src="images/item2.png" onclick="change_topic(dialogue2)" onmouseover="this.src = 'images/item2_a.png';update_tooltip('talk about being a warlock')"
+                <img class="action2" src="images/item2.png" onclick="change_topic(dialogue2)" onmouseover="this.src = 'images/item2_a.png';update_tooltip('talk about being an undead')"
                      onmouseout="this.src = 'images/item2.png';update_tooltip('description')" />
             </div>
             <div class="inventory3">
@@ -101,7 +101,7 @@
                      onmouseout="this.src = 'images/item2.png';update_tooltip('description')" />
             </div>
             <div class="inventory4">
-                <img class="action2" src="images/item2.png" onclick="change_topic(dialogue4)" onmouseover="this.src = 'images/item2_a.png';update_tooltip('compliment')"
+                <img class="action2" src="images/item2.png" onclick="change_topic(dialogue4)" onmouseover="this.src = 'images/item2_a.png';update_tooltip('encourage')"
                      onmouseout="this.src = 'images/item2.png';update_tooltip('description')" />
             </div>
             <div class="inventory5">
@@ -136,40 +136,38 @@
     </div>
 
     <script>
-        const dialogue1 = new Dialogue(4, ["You are observing Oyster, the party's elven warlock. (1/4)",
-                                           "Oyster: ... (2/4)",
-                                           "Oyster: What's with the staring? (3/4)",
-                                           "Oyster: Let's stop. (4/4)"
+        const dialogue1 = new Dialogue(4, ["You are observing Thritis, the party's undead rogue. (1/4)",
+                                           "Thritis: Hmmmm? (2/4)",
+                                           "Thritis: You're making me blush staring at me that much, bud! (3/4)",
+                                           "Thritis: I guess it can't be helped, given my jawline! (4/4)"
                                            ],
-                                           ["images/gif/Oyster/oyster_idle.gif",
-                                            "images/gif/Oyster/oyster_idle.gif",
-                                            "images/gif/Oyster/oyster_idle.gif",
-                                            "images/gif/Oyster/oyster_dark.gif"]
+                                           ["images/gif/Skeleton/skeleton_idle.gif",
+                                            "images/gif/Skeleton/skeleton_idle.gif",
+                                            "images/gif/Skeleton/skeleton_blush.gif",
+                                            "images/gif/Skeleton/skeleton_laugh.gif"]
 
         );
-        const dialogue2 = new Dialogue(6, ["You ask Oyster why he became a warlock. (1/6)",
-                                           "Oyster: You wish to know why I became a warlock? (2/6)",
-                                           "Oyster: YOU MEAN BESIDES UNLIMITED POWER AND KNOWLEDGE?! (3/6)",
-                                           "Oyster: ... (4/6)",
-                                           "Oyster: Mostly for worker benefits. (5/6)",
-                                           "Oyster: Turns out a cult has a lot of money. (6/6)"
+        const dialogue2 = new Dialogue(5, ["You ask Thritis how he became an undead. (1/5)",
+                                           "Thritis: Not sure, I just woke up like this. Flesh to bones in one memory to next! (2/5)",
+                                           "Thritis: It ain't all bad being an undead! Since... (3/5)",
+                                           "Thritis: Undeads don't pay taxes! You can't tax what ain't livin! (4/5)",
+                                           "Thritis: No wonder all those vampires can live in mansions and castles! (5/5)"
                                            ],
-                                          ["images/gif/Oyster/oyster_idle.gif",
-                                           "images/gif/Oyster/oyster_idle.gif",
-                                           "images/gif/Oyster/oyster_anger.gif",
-                                           "images/gif/Oyster/oyster_pause.gif",
-                                           "images/gif/Oyster/oyster_idle.gif",
-                                           "images/gif/Oyster/oyster_idle.gif"
+                                          ["images/gif/Skeleton/skeleton_idle.gif",
+                                           "images/gif/Skeleton/skeleton_idle.gif",
+                                           "images/gif/Skeleton/skeleton_laugh.gif",
+                                           "images/gif/Skeleton/skeleton_greed.gif",
+                                           "images/gif/Skeleton/skeleton_laugh.gif"
                                            ]);
-        const dialogue3 = new Dialogue(3, ["You ask Oyster his thoughts on the dungeon. (1/3)",
-                                           "Oyster: Do you feel them staring at you? No? (2/3)",
-                                           "Oyster: I've been staring back, but they aren't backing off. Hm. (3/3)"],
-            ["images/gif/Oyster/oyster_idle.gif", "images/gif/Oyster/oyster_looking.gif", "images/gif/Oyster/oyster_eyes.gif"]
+        const dialogue3 = new Dialogue(3, ["You ask Thritis his thoughts on the dungeon. (1/3)",
+                                           "Thritis: I was never too good with dark places... (2/3)",
+                                           "Thritis: And I'm an undead, and a rogue... (3/3)"],
+            ["images/gif/Skeleton/skeleton_idle.gif", "images/gif/Skeleton/skeleton_sad.gif", "images/gif/Skeleton/skeleton_sad.gif"]
             );
-        const dialogue4 = new Dialogue(3, ["You compliment Oyster of his arcane prowess (1/3)",
-            "Oyster: Eh, it's a skill anyone can achieve with enough practice. (2/3)",
-            "Oyster: And a soul or a two... (3/3)"],
-            ["images/gif/Oyster/oyster_idle.gif", "images/gif/Oyster/oyster_smile.gif", "images/gif/Oyster/oyster_grin.gif"]);
+        const dialogue4 = new Dialogue(3, ["You say encouraging words to Thritis (1/3)",
+            "Thritis: Haha, thanks, but I ain't too worried. (2/3)",
+            "Thritis: What's the worst that can happen? I'm already dead! (3/3)"],
+            ["images/gif/Skeleton/skeleton_idle.gif", "images/gif/Skeleton/skeleton_laugh.gif", "images/gif/Skeleton/skeleton_laugh.gif"]);
         var current_dialogue = null;
         var dia_num = [0];
 
