--- a/Week6/party3_page.html
+++ b/Week6/party3_page.html
@@ -4,7 +4,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
-    <title>Party member 1</title>
+    <title>Party member 3</title>
     <script src="script.js"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=DotGothic16&display=swap" rel="stylesheet">
@@ -16,11 +16,11 @@
         </div>
         <div class="screen">
             <div class="display">
-                <img id ="screen_pic" src="images/gif/Oyster/oyster_idle.gif" />
+                <img id="screen_pic" src="images/gif/Izzy/izzy_idle.gif" />
             </div>
             <div class="speech">
                 <p id="description">
-                    Oyster: What?
+                    Izzy: What do you need?
                 </p>
                 <button class="continue_btn" onclick="advance_text(current_dialogue, dia_num)">next</button>
             </div>
@@ -44,7 +44,7 @@
             </div>
 
             <div class="talk1">
-                <input class="talk_btn" type="button" value="Currently Talking to..."
+                <input class="talk_btn" type="button" value="Talk to Oyster"
                        onclick="window.location.href = 'party1_page.html'" />
                 <!--<button class="talk_btn" onclick="">Talk to member1</button>-->
             </div>
@@ -55,7 +55,7 @@
             </div>
 
             <div class="talk3">
-                <input class="talk_btn" type="button" value="Talk to Izzy"
+                <input class="talk_btn" type="button" value="Currently Talking to..."
                        onclick="window.location.href = 'party3_page.html'" />
             </div>
 
@@ -93,7 +93,7 @@
 
             </div>
             <div class="inventory2">
-                <img class="action2" src="images/item2.png" onclick="change_topic(dialogue2)" onmouseover="this.src = 'images/item2_a.png';update_tooltip('talk about being a warlock')"
+                <img class="action2" src="images/item2.png" onclick="change_topic(dialogue2)" onmouseover="this.src = 'images/item2_a.png';update_tooltip('talk about the other members')"
                      onmouseout="this.src = 'images/item2.png';update_tooltip('description')" />
             </div>
             <div class="inventory3">
@@ -101,7 +101,7 @@
                      onmouseout="this.src = 'images/item2.png';update_tooltip('description')" />
             </div>
             <div class="inventory4">
-                <img class="action2" src="images/item2.png" onclick="change_topic(dialogue4)" onmouseover="this.src = 'images/item2_a.png';update_tooltip('compliment')"
+                <img class="action2" src="images/item2.png" onclick="change_topic(dialogue4)" onmouseover="this.src = 'images/item2_a.png';update_tooltip('heal')"
                      onmouseout="this.src = 'images/item2.png';update_tooltip('description')" />
             </div>
             <div class="inventory5">
@@ -136,40 +136,42 @@
     </div>
 
     <script>
-        const dialogue1 = new Dialogue(4, ["You are observing Oyster, the party's elven warlock. (1/4)",
-                                           "Oyster: ... (2/4)",
-                                           "Oyster: What's with the staring? (3/4)",
-                                           "Oyster: Let's stop. (4/4)"
+        const dialogue1 = new Dialogue(4, ["You are observing Izzy, the party's priest. (1/4)",
+                                           "Izzy: Let's try again (2/4)",
+                                           "You are observing Izzy, the party's extraordinary priest. (3/4)",
+                                           "Izzy: Why, thank you! (4/4)"
                                            ],
-                                           ["images/gif/Oyster/oyster_idle.gif",
-                                            "images/gif/Oyster/oyster_idle.gif",
-                                            "images/gif/Oyster/oyster_idle.gif",
-                                            "images/gif/Oyster/oyster_dark.gif"]
+                                           ["images/gif/Izzy/izzy_idle.gif",
+                                            "images/gif/Izzy/izzy_eye.gif",
+                                            "images/gif/Izzy/izzy_idle.gif",
+                                            "images/gif/Izzy/izzy_laugh.gif"]
 
         );
-        const dialogue2 = new Dialogue(6, ["You ask Oyster why he became a warlock. (1/6)",
-                                           "Oyster: You wish to know why I became a warlock? (2/6)",
-                                           "Oyster: YOU MEAN BESIDES UNLIMITED POWER AND KNOWLEDGE?! (3/6)",
-                                           "Oyster: ... (4/6)",
-                                           "Oyster: Mostly for worker benefits. (5/6)",
-                                           "Oyster: Turns out a cult has a lot of money. (6/6)"
+        const dialogue2 = new Dialogue(5, ["You ask Izzy how he feels having a warlock and an undead in the party. (1/5)",
+                                           "Izzy: If you're asking if I harbor any ill prejudice towards them... (2/5)",
+                                           "Izzy: Not at all! (3/5)",
+                                           "Izzy: I'm sure they had perfectly good reason for following path of treachery and darkness. (4/5)",
+                                           "Izzy: Besides...They will get what they deserve sooner or later anyways. (5/5)"
                                            ],
-                                          ["images/gif/Oyster/oyster_idle.gif",
-                                           "images/gif/Oyster/oyster_idle.gif",
-                                           "images/gif/Oyster/oyster_anger.gif",
-                                           "images/gif/Oyster/oyster_pause.gif",
-                                           "images/gif/Oyster/oyster_idle.gif",
-                                           "images/gif/Oyster/oyster_idle.gif"
-                                           ]);
-        const dialogue3 = new Dialogue(3, ["You ask Oyster his thoughts on the dungeon. (1/3)",
-                                           "Oyster: Do you feel them staring at you? No? (2/3)",
-                                           "Oyster: I've been staring back, but they aren't backing off. Hm. (3/3)"],
-            ["images/gif/Oyster/oyster_idle.gif", "images/gif/Oyster/oyster_looking.gif", "images/gif/Oyster/oyster_eyes.gif"]
+                                          ["images/gif/Izzy/izzy_idle.gif",
+                                           "images/gif/Izzy/izzy_seye.gif",
+                                           "images/gif/Izzy/izzy_eye.gif",
+                                           "images/gif/Izzy/izzy_laugh.gif",
+                                           "images/gif/Izzy/izzy_seye.gif"
+            ]);
+
+        const dialogue3 = new Dialogue(3, ["You ask Izzy his thoughts on the dungeon. (1/3)",
+            "Izzy: Be careful, these places are always full of traps. (2/3)",
+            "Izzy: Just try not to lose any limbs. They're quiet exhausting to regrow. (3/3)"],
+            ["images/gif/Izzy/izzy_idle.gif", "images/gif/Izzy/izzy_serious.gif", "images/gif/Izzy/izzy_laugh.gif"]);
+
+        const dialogue4 = new Dialogue(4, ["You ask Izzy to heal you. (1/4)",
+                                           "Izzy: I see. You are a bit hurt... (2/4)",
+                                           "Izzy: But, let's strive for efficiency, and go for maximum value each heal. (3/4)",
+                                           "Izzy: Let's wait until you get stabbed once or twice more. (4/4)"],
+            ["images/gif/Izzy/izzy_idle.gif", "images/gif/Izzy/izzy_side.gif", "images/gif/Izzy/izzy_grin.gif", "images/gif/Izzy/izzy_laugh.gif"]
             );
-        const dialogue4 = new Dialogue(3, ["You compliment Oyster of his arcane prowess (1/3)",
-            "Oyster: Eh, it's a skill anyone can achieve with enough practice. (2/3)",
-            "Oyster: And a soul or a two... (3/3)"],
-            ["images/gif/Oyster/oyster_idle.gif", "images/gif/Oyster/oyster_smile.gif", "images/gif/Oyster/oyster_grin.gif"]);
+        
         var current_dialogue = null;
         var dia_num = [0];
 
