--- a/Week6/base_page.html
+++ b/Week6/base_page.html
@@ -134,7 +134,7 @@
 
     <script>
         const dialogue1 = new Dialogue(2, ["It's a bonfire, lit with suprisngly little amount of magic given the party. (1/1)"]);
-        const dialogue2 = new Dialogue(3, ["You agree that converations are better with other peopel. Good job! You tell yourself. (1/1)"]);
+        const dialogue2 = new Dialogue(3, ["You agree that converations are better with other people. Good job! You tell yourself. (1/1)"]);
         var current_dialogue = null;
         var dia_num = [0];
 
