--- a/Week6/base_page.html
+++ b/Week6/base_page.html
@@ -44,7 +44,7 @@
             </div>
 
             <div class="talk1">
-                <input class="talk_btn" type="button" value="Talk to member1"
+                <input class="talk_btn" type="button" value="Talk to Oyster"
                        onclick="window.location.href = 'party1_page.html'" />
                 <!--<button class="talk_btn" onclick="">Talk to member1</button>-->
             </div>
