--- a/index.html
+++ b/index.html
@@ -52,6 +52,13 @@
         </a>
     </p>
 
+    <p class="Chapter">
+        WEEK 9:
+        <a href="/Week9/week9.html" target="_blank">
+            button
+        </a>
+    </p>
+
 
 
 </body>
