--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
         <a href="/Week9/week9.html" target="_blank">
             button
         </a>
+        <a href="/Week9/Medium.html" target="_blank">
+            Medium is Massage
+        </a>
     </p>
 
 
