--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
 
     <p class="Chapter">
         WEEK 9:
-        <a href="/Week9/week9.html" target="_blank">
+        <a href="/Week9/Button/week9.html" target="_blank">
             button
         </a>
-        <a href="/Week9/Medium.html" target="_blank">
+        <a href="/Week9/Medium/Medium.html" target="_blank">
             Medium is Massage
         </a>
     </p>
