added jquery project

--- a/index.html
+++ b/index.html
@@ -62,6 +62,13 @@
         </a>
     </p>
 
+    <p class="Chapter">
+        WEEK 11:
+        <a href="/Week11/drawboard.html" target="_blank">
+            Jquery project
+        </a>
+    </p>
+
 
 
 </body>
