final presenation added

--- a/index.html
+++ b/index.html
@@ -69,7 +69,12 @@
         </a>
     </p>
 
-
+    <p class="Final">
+        Final Project:
+        <a href="/Final/FoodSelectorPresentation.html" target="_blank">
+            Food Selector
+        </a>
+    </p>
 
 </body>
 </html>
