--- a/index.html
+++ b/index.html
@@ -74,6 +74,9 @@
         <a href="/Final/FoodSelectorPresentation.html" target="_blank">
             Food Selector
         </a>
+        <a href="/Final/project/FoodSelector.html" target="_blank">
+            Food Selector
+        </a>
     </p>
 
 </body>
