--- a/Final/project/FoodSelector.html
+++ b/Final/project/FoodSelector.html
@@ -2,7 +2,7 @@
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title>Food Selector</title>
+    <title></title>
     <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
     <meta charset="utf-8" />
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
@@ -20,7 +20,7 @@
 <body>
     <div class="container">
         <nav class="navbar">
-            <a href="null" class="logo">
+            <a href="FoodSelector.html" class="logo">
                 <img src="images/logo.png" />
             </a>
             <ul class="nav_links">
