--- a/Final/project/FoodSelector_wheel.html
+++ b/Final/project/FoodSelector_wheel.html
@@ -21,7 +21,7 @@
 <body>
     <div class="container_wheel">
         <nav class="navbar">
-            <a href="null" class="logo">
+            <a href="FoodSelector.html" class="logo">
                 <img src="images/logo.png" />
             </a>
             <ul class="nav_links">
