--- a/Final/project/FoodSelector_wheel.html
+++ b/Final/project/FoodSelector_wheel.html
@@ -2,7 +2,7 @@
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title>Food Selector</title>
+    <title>Lunch Buddy</title>
     <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
     <meta charset="utf-8" />
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
