--- a/Final/project/FoodSelector_start.html
+++ b/Final/project/FoodSelector_start.html
@@ -18,42 +18,25 @@
     <link rel="icon" href="images/favicon.png" />
 </head>
 <body>
-    <div class="container">
+    <div class="container_start">
         <nav class="navbar">
             <a href="FoodSelector_start.html" class="logo">
                 <img src="images/logo.png" />
             </a>
             <ul class="nav_links">
                 <!--<li class="nav_items"><a href="FoodSelector_main.html">Home</a></li>-->
-                <li class="nav_items"><a href="FoodSelector_wheel.html">Wheel</a></li>
+                <!--<li class="nav_items"><a href="FoodSelector_wheel.html">Wheel</a></li>-->
             </ul>
         </nav>
 
-        <div class="foodMascotContainer">
-            <img src="images/mascot/mascot_2.gif" />
-        </div>
-
-        <div class="questionContainer">
-            <div>
-                <p id="question">
-                    How cheap do you want the food?
-                </p>
-            </div>
-
-            <div id="answerDisplay"> 
-                <img id="answerFood" src="images/burger.png" /> 
-                Try spinning the wheel if you want something else!
-            </div>
-
-            <div><button id="answer1">Very Cheap!</button></div>
-            <div><button id="answer2">Cheap!</button></div>
-            <div><button id="answer3">Don't Care!</button></div>
-            <div><button id="answer4">Expensive!</button></div>
-            <div><button id="answer5">Very Expensive!</button></div>
+        <div class="option_container">
+            <div id="intro_text">Have trouble deciding what to get for lunch? Use Lunch Buddy to decide.</div>
+            <div><button id="choice1">Take a quiz!</button></div>
+            <div><button id="choice2">Roulette!</button></div>
         </div>
 
 
     </div>
-    
+
 </body>
 </html>
