--- a/Web-Developer-Course/store/blacksmith_store.html
+++ b/Web-Developer-Course/store/blacksmith_store.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" href="images/old shield_item.png" />
     <link href="../jquery_ui/jquery-ui.css" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js">
     </script>
