moved files around

--- a/index.html
+++ b/index.html
@@ -69,13 +69,20 @@
         </a>
     </p>
 
-    <p class="Final">
+    <p class="Chapter">
         Final Project:
         <a href="/Final/FoodSelectorPresentation.html" target="_blank">
             Food Selector
         </a>
         <a href="/Final/project/FoodSelector_start.html" target="_blank">
             Food Selector
+        </a>
+    </p>
+
+    <p class="Chapter">
+        Summer Projects:
+        <a href="/Web-Developer-Course/Dungeon/antri_home.html" target="_blank">
+            Project Antri
         </a>
     </p>
 
